src/test/resources/fixtures/pitfalls/incorrect-random-range.php
<?php

    <error descr="The range is not defined properly.">rand</error> (2, 1);
    rand(1, 2);

    <error descr="The range is not defined properly.">mt_rand</error> (2, 1);
    mt_rand(1, 2);

    <error descr="The range is not defined properly.">random_int</error> (2, 1);
    random_int(1, 2);